[gd_scene load_steps=10 format=3 uid="uid://xxh7m3xunw2a"]

[ext_resource type="Theme" uid="uid://cnw25cdhcyxjc" path="res://sources/Default.tres" id="1_0ayx4"]
[ext_resource type="Script" path="res://scenes/Beginning.gd" id="2_n1d7v"]
[ext_resource type="Texture2D" uid="uid://b7kw54mghbdhu" path="res://sources/GUI/Beginning/BeginningMenuBG.png" id="3_04b3m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j52rv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_18mqq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nv3i6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rbw2l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4jn4c"]

[sub_resource type="Theme" id="Theme_a2um6"]
Button/styles/disabled = SubResource("StyleBoxEmpty_j52rv")
Button/styles/focus = SubResource("StyleBoxEmpty_18mqq")
Button/styles/hover = SubResource("StyleBoxEmpty_nv3i6")
Button/styles/normal = SubResource("StyleBoxEmpty_rbw2l")
Button/styles/pressed = SubResource("StyleBoxEmpty_4jn4c")

[node name="Beginning" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0ayx4")
script = ExtResource("2_n1d7v")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/margin_left = 200

[node name="ColorRect" type="NinePatchRect" parent="MarginContainer"]
texture_filter = 1
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("3_04b3m")
patch_margin_left = 47
patch_margin_top = 20
patch_margin_right = 47
patch_margin_bottom = 20
axis_stretch_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0

[node name="MainArea" type="VBoxContainer" parent="MarginContainer/ColorRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 50

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/ColorRect/HBoxContainer/MainArea"]
layout_mode = 2

[node name="ButtonGroup" type="VBoxContainer" parent="MarginContainer/ColorRect/HBoxContainer/MainArea"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_a2um6")
theme_override_constants/separation = 30
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ColorRect/HBoxContainer/MainArea/ButtonGroup"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Begin" type="Button" parent="MarginContainer/ColorRect/HBoxContainer/MainArea/ButtonGroup/VBoxContainer"]
layout_mode = 2
text = "开始游戏"

[node name="Continue" type="Button" parent="MarginContainer/ColorRect/HBoxContainer/MainArea/ButtonGroup/VBoxContainer"]
visible = false
layout_mode = 2
text = "继续"

[node name="Setting" type="Button" parent="MarginContainer/ColorRect/HBoxContainer/MainArea/ButtonGroup"]
layout_mode = 2
text = "游戏选项"

[node name="DLC" type="Button" parent="MarginContainer/ColorRect/HBoxContainer/MainArea/ButtonGroup"]
layout_mode = 2
text = "附加内容"

[node name="Quit" type="Button" parent="MarginContainer/ColorRect/HBoxContainer/MainArea/ButtonGroup"]
layout_mode = 2
text = "退出游戏"

[connection signal="pressed" from="MarginContainer/ColorRect/HBoxContainer/MainArea/ButtonGroup/VBoxContainer/Begin" to="." method="_on_begin_pressed"]
[connection signal="pressed" from="MarginContainer/ColorRect/HBoxContainer/MainArea/ButtonGroup/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MarginContainer/ColorRect/HBoxContainer/MainArea/ButtonGroup/Setting" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="MarginContainer/ColorRect/HBoxContainer/MainArea/ButtonGroup/DLC" to="." method="_on_dlc_pressed"]
[connection signal="pressed" from="MarginContainer/ColorRect/HBoxContainer/MainArea/ButtonGroup/Quit" to="." method="_on_quit_pressed"]
